RESOLVED FIXED173576
Regression(r217570): com.apple.WebKit.Networking crash at com.apple.WebKit: WebKit::ChildProcess::didReceiveInvalidMessage (Breaks 32-bit apps)
https://bugs.webkit.org/show_bug.cgi?id=173576
Summary Regression(r217570): com.apple.WebKit.Networking crash at com.apple.WebKit: W...
Chris Dumez
Reported 2017-06-19 19:10:40 PDT
Regression(r217570): com.apple.WebKit.Networking crash at com.apple.WebKit: WebKit::ChildProcess::didReceiveInvalidMessage (Breaks 32-bit apps): Application Specific Information: Received invalid message: 'NetworkProcess::InitializeNetworkProcess' Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x0000000100a6810e WebKit::ChildProcess::didReceiveInvalidMessage(IPC::Connection&, IPC::StringReference, IPC::StringReference) + 142 1 com.apple.WebKit 0x0000000100a6a26b IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 211 2 com.apple.WebKit 0x0000000100a6cea3 IPC::Connection::dispatchOneMessage() + 175 3 com.apple.JavaScriptCore 0x0000000104f5bb29 WTF::RunLoop::performWork() + 169 4 com.apple.JavaScriptCore 0x0000000104f5bde2 WTF::RunLoop::performWork(void*) + 34
Attachments
Patch (3.26 KB, patch)
2017-06-19 19:32 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-06-19 19:11:00 PDT
Chris Dumez
Comment 2 2017-06-19 19:32:32 PDT
Tim Horton
Comment 3 2017-06-19 19:37:33 PDT
Comment on attachment 313352 [details] Patch r=me if your testing proves that this is the problem. We should think about ways we can make failures like this less mysterious in the future, since this isn't the first time.
Chris Dumez
Comment 4 2017-06-19 20:17:09 PDT
Comment on attachment 313352 [details] Patch Clearing flags on attachment: 313352 Committed r218528: <http://trac.webkit.org/changeset/218528>
Chris Dumez
Comment 5 2017-06-19 20:17:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.